--- a/Recommender_System.ipynb
+++ b/Recommender_System.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Recommender_System.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNQ3ol/y5LRGHw10hFNDryr",
+      "authorship_tag": "ABX9TyOqKP+3V8hP5AnYXzWkOrlK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
         "                           'Lakshay':4.0,\n",
         "                           'Commando':1.0}}"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +213,7 @@
       "source": [
         "import math"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -228,7 +228,7 @@
       "source": [
         "math.pow(3-3,2)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
       "source": [
         "math.pow(3.5-4,2)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
       "source": [
         "math.pow(3-3,2)+math.pow(3.5-4,2)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +306,7 @@
       "source": [
         "1/(1+math.sqrt(math.pow(3-3,2)+math.pow(3.5-4,2)))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +348,7 @@
         "\n",
         "  return 1/(1+math.sqrt(sum_euclidean))"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -358,12 +358,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PfffT-eIIhGL",
-        "outputId": "9a6b837e-6c1c-47a9-c1c4-441ec4a99d6c"
+        "outputId": "dba31b71-55bf-423c-df52-85e959f94a5b"
       },
       "source": [
         "Euclidean_distance(users_feedback,'Mohit','Rahul')"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -373,7 +373,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 21
         }
       ]
     },
@@ -399,7 +399,7 @@
         "  similarity.reverse()\n",
         "  return similarity"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +414,7 @@
       "source": [
         "get_similarities(users_feedback,'Mohit')"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -445,7 +445,7 @@
       "source": [
         "get_similarities(users_feedback,'Rahul')"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,6 +461,188 @@
           },
           "metadata": {},
           "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Eb8dERlimSnf"
+      },
+      "source": [
+        "Movie Recommendation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0fOrdYnToMHa"
+      },
+      "source": [
+        "def get_user_recommendation(dataset,user):\n",
+        "  totals = {}\n",
+        "  sum_similarity = {}\n",
+        "  for other in dataset:\n",
+        "    if other == user:\n",
+        "      continue\n",
+        "\n",
+        "    #print('--------')  \n",
+        "    #print(other)\n",
+        "    similarity = Euclidean_distance(dataset,user,other)\n",
+        "    #print(similarity)\n",
+        "\n",
+        "    if similarity == 0:\n",
+        "      continue\n",
+        "    for item in dataset[other]:\n",
+        "      #print(item)\n",
+        "      if item not in dataset[user]:\n",
+        "        #print(item)\n",
+        "        totals.setdefault(item,0)\n",
+        "        #print(totals)\n",
+        "        totals[item] += dataset[other][item]*similarity\n",
+        "\n",
+        "        sum_similarity.setdefault(item,0)\n",
+        "        sum_similarity[item] += similarity\n",
+        "\n",
+        "  #print(totals)\n",
+        "  #print(sum_similarity)\n",
+        "\n",
+        "  recommendations = [(total/sum_similarity[item],item) for item,total in totals.items()]\n",
+        "  recommendations.sort()\n",
+        "  recommendations.reverse()\n",
+        "  return recommendations"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t5S40KcapNWx",
+        "outputId": "19ee799c-44e2-426c-b96c-88900e8b57d6"
+      },
+      "source": [
+        "get_user_recommendation(users_feedback,'Rahul')"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(3.5207797678329342, 'MS Dhoni'),\n",
+              " (2.7827232588048805, 'Satyamev Jayte'),\n",
+              " (2.4015514030492744, 'War')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DlZ_Z7zCv7YM",
+        "outputId": "cf0cf53d-8b08-4d09-829e-8322aa429c11"
+      },
+      "source": [
+        "get_user_recommendation(users_feedback,'Smriti')"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(2.468366941941361, 'War'), (2.390064768794305, 'Commando')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "crfbLTFGwRdJ"
+      },
+      "source": [
+        "recommendations = get_user_recommendation(users_feedback,'Rahul')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "czrlVSBwwkjo",
+        "outputId": "4dec1b6d-d2c6-40bd-f001-d28fbb96f654"
+      },
+      "source": [
+        "recommendations"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(3.5207797678329342, 'MS Dhoni'),\n",
+              " (2.7827232588048805, 'Satyamev Jayte'),\n",
+              " (2.4015514030492744, 'War')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6eG_FOnjwnmX"
+      },
+      "source": [
+        "def print_user_recommendation(recommendations,min_score):\n",
+        "  for movie in recommendations:\n",
+        "    #print(movie,movie[0],movie[1])\n",
+        "    if movie[0] >= min_score:\n",
+        "      print(movie[1])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jqgKGeflxc9N",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1a50d568-b763-4af0-99dc-3cbc361d8b9d"
+      },
+      "source": [
+        "print_user_recommendation(recommendations,3)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MS Dhoni\n"
+          ]
         }
       ]
     }
