--- a/Recommender_System.ipynb
+++ b/Recommender_System.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Recommender_System.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqKP+3V8hP5AnYXzWkOrlK",
+      "authorship_tag": "ABX9TyM341fSoPCiLV0Jh6f2z5y9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,7 +213,7 @@
       "source": [
         "import math"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -348,7 +348,7 @@
         "\n",
         "  return 1/(1+math.sqrt(sum_euclidean))"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
         "  similarity.reverse()\n",
         "  return similarity"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -512,7 +512,7 @@
         "  recommendations.reverse()\n",
         "  return recommendations"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -620,7 +620,7 @@
         "    if movie[0] >= min_score:\n",
         "      print(movie[1])"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -642,6 +642,281 @@
           "name": "stdout",
           "text": [
             "MS Dhoni\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "blJCCnzUsYQL"
+      },
+      "source": [
+        "Similar Movies"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4e5B57uFsaqA"
+      },
+      "source": [
+        "user_feedback_movies = {'Satyamev Jayte':{'Mohit':2.5,\n",
+        "                                          'Palak':3.0,\n",
+        "                                          'Smriti':2.5,\n",
+        "                                          'Piyush':3.0,\n",
+        "                                          'Sachin':3.0},\n",
+        "                        'Shershaah':{'Mohit':3.5,\n",
+        "                                          'Palak':3.5,\n",
+        "                                          'Smriti':3.0,\n",
+        "                                          'Neha':3.5,\n",
+        "                                          'Piyush':4.0,\n",
+        "                                          'Sachin':4.0,\n",
+        "                                          'Rahul':4.5},\n",
+        "                        'War':{'Mohit':3.0,\n",
+        "                                          'Palak':1.5,\n",
+        "                                          'Neha':3.0,\n",
+        "                                          'Piyush':2.0},\n",
+        "                        'Lakshay':{'Mohit':3.5,\n",
+        "                                          'Palak':5.0,\n",
+        "                                          'Smriti':3.5,\n",
+        "                                          'Neha':4.0,\n",
+        "                                          'Piyush':3.0,\n",
+        "                                          'Sachin':5.0,\n",
+        "                                          'Rahul':4.0},\n",
+        "                        'Commando':{'Mohit':2.5,\n",
+        "                                          'Palak':3.0,\n",
+        "                                          'Neha':2.5,\n",
+        "                                          'Piyush':2.0,\n",
+        "                                          'Sachin':3.5,\n",
+        "                                          'Rahul':1.0},\n",
+        "                        'MS Dhoni':{'Mohit':3.0,\n",
+        "                                          'Palak':3.5,\n",
+        "                                          'Smriti':4.0,\n",
+        "                                          'Neha':4.5,\n",
+        "                                          'Piyush':3.0,\n",
+        "                                          'Sachin':3.0}}"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XFYT6s9ewky7",
+        "outputId": "b6478bc7-bb82-424c-c86c-ea58d434df17"
+      },
+      "source": [
+        "user_feedback_movies"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Commando': {'Mohit': 2.5,\n",
+              "  'Neha': 2.5,\n",
+              "  'Palak': 3.0,\n",
+              "  'Piyush': 2.0,\n",
+              "  'Rahul': 1.0,\n",
+              "  'Sachin': 3.5},\n",
+              " 'Lakshay': {'Mohit': 3.5,\n",
+              "  'Neha': 4.0,\n",
+              "  'Palak': 5.0,\n",
+              "  'Piyush': 3.0,\n",
+              "  'Rahul': 4.0,\n",
+              "  'Sachin': 5.0,\n",
+              "  'Smriti': 3.5},\n",
+              " 'MS Dhoni': {'Mohit': 3.0,\n",
+              "  'Neha': 4.5,\n",
+              "  'Palak': 3.5,\n",
+              "  'Piyush': 3.0,\n",
+              "  'Sachin': 3.0,\n",
+              "  'Smriti': 4.0},\n",
+              " 'Satyamev Jayte': {'Mohit': 2.5,\n",
+              "  'Palak': 3.0,\n",
+              "  'Piyush': 3.0,\n",
+              "  'Sachin': 3.0,\n",
+              "  'Smriti': 2.5},\n",
+              " 'Shershaah': {'Mohit': 3.5,\n",
+              "  'Neha': 3.5,\n",
+              "  'Palak': 3.5,\n",
+              "  'Piyush': 4.0,\n",
+              "  'Rahul': 4.5,\n",
+              "  'Sachin': 4.0,\n",
+              "  'Smriti': 3.0},\n",
+              " 'War': {'Mohit': 3.0, 'Neha': 3.0, 'Palak': 1.5, 'Piyush': 2.0}}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UpHgt_n2w_-1",
+        "outputId": "468a482d-e3ee-4f51-cc3a-7999553def7a"
+      },
+      "source": [
+        "user_feedback_movies['MS Dhoni']"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Mohit': 3.0,\n",
+              " 'Neha': 4.5,\n",
+              " 'Palak': 3.5,\n",
+              " 'Piyush': 3.0,\n",
+              " 'Sachin': 3.0,\n",
+              " 'Smriti': 4.0}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w2aOcIA8xYKP",
+        "outputId": "8f34a5a7-2f3e-4c0a-cdc9-0d1d5e66ddad"
+      },
+      "source": [
+        "Euclidean_distance(user_feedback_movies,'Lakshay','Commando')"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.18464218557642828"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H9qsjEr_xyW_",
+        "outputId": "2a1172e1-7ba0-4149-821b-35c90c7f9987"
+      },
+      "source": [
+        "get_similarities(user_feedback_movies,'Lakshay')"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(0.3090169943749474, 'Shershaah'),\n",
+              " (0.27429188517743175, 'MS Dhoni'),\n",
+              " (0.2402530733520421, 'Satyamev Jayte'),\n",
+              " (0.20799159651347807, 'War'),\n",
+              " (0.18464218557642828, 'Commando')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pfjnoxYnyR-Z",
+        "outputId": "e1ba238e-5b9f-4253-f82b-c2daf155965e"
+      },
+      "source": [
+        "get_user_recommendation(user_feedback_movies,'Satyamev Jayte')"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(3.4159791153437715, 'Neha'), (2.8288695093208878, 'Rahul')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "quWtPruyyxwM",
+        "outputId": "032687e3-200f-4649-ea07-a126a01d8cba"
+      },
+      "source": [
+        "get_user_recommendation(user_feedback_movies,'Commando')"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(3.132214478489187, 'Smriti')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QRqLnXRlzDQi",
+        "outputId": "64068af3-09ea-40cf-dc68-0aa7ad7df9b4"
+      },
+      "source": [
+        "recommendations = get_user_recommendation(user_feedback_movies,'War')\n",
+        "print_user_recommendation(recommendations,3)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sachin\n",
+            "Smriti\n"
           ]
         }
       ]
