--- a/Recommender_System.ipynb
+++ b/Recommender_System.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Recommender_System.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM341fSoPCiLV0Jh6f2z5y9",
+      "authorship_tag": "ABX9TyNZOXZYCN0xFirf1PyyNkjP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
         "                           'Lakshay':4.0,\n",
         "                           'Commando':1.0}}"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -88,12 +88,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PCNROAINwY6_",
-        "outputId": "bc6d9fe8-8fb8-450b-c1c2-b613344276de"
+        "outputId": "3480e8a4-48cc-4cdc-9042-881b5a3fe72f"
       },
       "source": [
         "users_feedback"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -135,7 +135,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 42
         }
       ]
     },
@@ -213,7 +213,7 @@
       "source": [
         "import math"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -348,7 +348,7 @@
         "\n",
         "  return 1/(1+math.sqrt(sum_euclidean))"
       ],
-      "execution_count": 8,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
         "  similarity.reverse()\n",
         "  return similarity"
       ],
-      "execution_count": 13,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -512,7 +512,7 @@
         "  recommendations.reverse()\n",
         "  return recommendations"
       ],
-      "execution_count": 15,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -620,7 +620,7 @@
         "    if movie[0] >= min_score:\n",
         "      print(movie[1])"
       ],
-      "execution_count": 19,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -697,7 +697,7 @@
         "                                          'Piyush':3.0,\n",
         "                                          'Sachin':3.0}}"
       ],
-      "execution_count": 3,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -707,12 +707,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XFYT6s9ewky7",
-        "outputId": "b6478bc7-bb82-424c-c86c-ea58d434df17"
+        "outputId": "f48f7b58-b762-413e-a25a-4fac5e20a2b6"
       },
       "source": [
         "user_feedback_movies"
       ],
-      "execution_count": 5,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -753,7 +753,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 39
         }
       ]
     },
@@ -769,7 +769,7 @@
       "source": [
         "user_feedback_movies['MS Dhoni']"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -800,7 +800,7 @@
       "source": [
         "Euclidean_distance(user_feedback_movies,'Lakshay','Commando')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -826,7 +826,7 @@
       "source": [
         "get_similarities(user_feedback_movies,'Lakshay')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -856,7 +856,7 @@
       "source": [
         "get_user_recommendation(user_feedback_movies,'Satyamev Jayte')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -882,7 +882,7 @@
       "source": [
         "get_user_recommendation(user_feedback_movies,'Commando')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -909,7 +909,7 @@
         "recommendations = get_user_recommendation(user_feedback_movies,'War')\n",
         "print_user_recommendation(recommendations,3)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -917,6 +917,196 @@
           "text": [
             "Sachin\n",
             "Smriti\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cEMNXHenkahF"
+      },
+      "source": [
+        "Loading the MovieLens dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9fX2ViOqkdej"
+      },
+      "source": [
+        "def load_movielens():\n",
+        "  movies = {}\n",
+        "  for row in open('/u.item', encoding = 'ISO-8859-1'):\n",
+        "    #print(row)\n",
+        "    (id,name) =  row.split('|')[0:2]\n",
+        "    #print(id,name)\n",
+        "    movies[id] = name\n",
+        "  #print(movies)\n",
+        "\n",
+        "  dataset = {}\n",
+        "  for row in open('/content/u.data'):\n",
+        "    #print(row)\n",
+        "    (user, movie_id, score, time) = row.split('\\t')\n",
+        "    #print(user, movie_id, score)\n",
+        "    dataset.setdefault(user, {})\n",
+        "    dataset[user][movies[movie_id]] = float(score)\n",
+        "  return dataset"
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Pc220Im4mPcR"
+      },
+      "source": [
+        "movielens_dataset = load_movielens()"
+      ],
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VDzpGQHG7Rjg"
+      },
+      "source": [
+        "movielens_dataset"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7tYbtuaD7dKB"
+      },
+      "source": [
+        "movielens_dataset['1']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-asAWSJ-8Olv",
+        "outputId": "763bb029-137f-4466-c115-31885c09d1da"
+      },
+      "source": [
+        "movielens_dataset['1']['101 Dalmatians (1996)']"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AVzzolI3_Zr-"
+      },
+      "source": [
+        "Recommendations with MovieLens"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "srZHjwnM_g_d"
+      },
+      "source": [
+        "get_similarities(movielens_dataset,'1')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MjmMHhzk_8vr"
+      },
+      "source": [
+        "get_user_recommendation(movielens_dataset,'1')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xTgK_zg5AFxL",
+        "outputId": "a0280390-0aae-4af7-99cb-866b7571e278"
+      },
+      "source": [
+        "print_user_recommendation(get_user_recommendation(movielens_dataset,'1'),4.8)"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saint of Fort Washington, The (1993)\n",
+            "They Made Me a Criminal (1939)\n",
+            "Someone Else's America (1995)\n",
+            "Santa with Muscles (1996)\n",
+            "Prefontaine (1997)\n",
+            "Marlene Dietrich: Shadow and Light (1996) \n",
+            "Great Day in Harlem, A (1994)\n",
+            "Entertaining Angels: The Dorothy Day Story (1996)\n",
+            "Aiqing wansui (1994)\n",
+            "Star Kid (1997)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uiV3kmciAa3p",
+        "outputId": "23343c78-4047-40e1-a8e1-f0291d690052"
+      },
+      "source": [
+        "print_user_recommendation(get_user_recommendation(movielens_dataset,'10'),4.9)"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Star Kid (1997)\n",
+            "Someone Else's America (1995)\n",
+            "Santa with Muscles (1996)\n",
+            "Saint of Fort Washington, The (1993)\n",
+            "Prefontaine (1997)\n",
+            "Marlene Dietrich: Shadow and Light (1996) \n",
+            "Great Day in Harlem, A (1994)\n",
+            "Entertaining Angels: The Dorothy Day Story (1996)\n",
+            "Aiqing wansui (1994)\n",
+            "They Made Me a Criminal (1939)\n"
           ]
         }
       ]
