--- a/Recommender_System.ipynb
+++ b/Recommender_System.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Recommender_System.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNZOXZYCN0xFirf1PyyNkjP",
+      "authorship_tag": "ABX9TyPBJGYqhJzTy0273nYzcjDd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
         "                           'Lakshay':4.0,\n",
         "                           'Commando':1.0}}"
       ],
-      "execution_count": 41,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "source": [
         "users_feedback"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -213,7 +213,7 @@
       "source": [
         "import math"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -348,7 +348,7 @@
         "\n",
         "  return 1/(1+math.sqrt(sum_euclidean))"
       ],
-      "execution_count": 58,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
         "  similarity.reverse()\n",
         "  return similarity"
       ],
-      "execution_count": 54,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -512,7 +512,7 @@
         "  recommendations.reverse()\n",
         "  return recommendations"
       ],
-      "execution_count": 55,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -522,12 +522,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t5S40KcapNWx",
-        "outputId": "19ee799c-44e2-426c-b96c-88900e8b57d6"
+        "outputId": "b06a8bae-d845-4498-bde5-ade5c4482f84"
       },
       "source": [
         "get_user_recommendation(users_feedback,'Rahul')"
       ],
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,7 +539,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 65
         }
       ]
     },
@@ -620,7 +620,7 @@
         "    if movie[0] >= min_score:\n",
         "      print(movie[1])"
       ],
-      "execution_count": 56,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -697,7 +697,7 @@
         "                                          'Piyush':3.0,\n",
         "                                          'Sachin':3.0}}"
       ],
-      "execution_count": 38,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -712,7 +712,7 @@
       "source": [
         "user_feedback_movies"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -954,7 +954,7 @@
         "    dataset[user][movies[movie_id]] = float(score)\n",
         "  return dataset"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -965,7 +965,7 @@
       "source": [
         "movielens_dataset = load_movielens()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1002,7 +1002,7 @@
       "source": [
         "movielens_dataset['1']['101 Dalmatians (1996)']"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1059,7 +1059,7 @@
       "source": [
         "print_user_recommendation(get_user_recommendation(movielens_dataset,'1'),4.8)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1082,16 +1082,16 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "uiV3kmciAa3p",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "uiV3kmciAa3p",
         "outputId": "23343c78-4047-40e1-a8e1-f0291d690052"
       },
       "source": [
         "print_user_recommendation(get_user_recommendation(movielens_dataset,'10'),4.9)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1107,6 +1107,502 @@
             "Entertaining Angels: The Dorothy Day Story (1996)\n",
             "Aiqing wansui (1994)\n",
             "They Made Me a Criminal (1939)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5XuYf3bdljiB"
+      },
+      "source": [
+        "MovieLens and Movie Similarity"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AWH3-BPGln3S"
+      },
+      "source": [
+        "def load_movielens_item():\n",
+        "  movies = {}\n",
+        "  for row in open('/u.item', encoding = 'ISO-8859-1'):\n",
+        "    (id,name) =  row.split('|')[0:2]\n",
+        "    movies[id] = name\n",
+        "  #print(movies)\n",
+        "\n",
+        "  dataset = {}\n",
+        "  for row in open('/u.data'):\n",
+        "    (user, movie_id, score, time) = row.split('\\t')\n",
+        "    dataset.setdefault(movies[movie_id], {})\n",
+        "    dataset[movies[movie_id]][user] = float(score)\n",
+        "  #print(dataset)\n",
+        "  return dataset"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hjCTGUdYmIRO"
+      },
+      "source": [
+        "movielens_dataset_item = load_movielens_item()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9zgrwsMVqYNa"
+      },
+      "source": [
+        "movielens_dataset_item"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KCmzF0NFqqe0",
+        "outputId": "c0ec5972-1072-4fc7-9f04-fb0d749254d4"
+      },
+      "source": [
+        "movielens_dataset_item['Body Snatcher, The (1945)']"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'102': 2.0,\n",
+              " '13': 4.0,\n",
+              " '21': 3.0,\n",
+              " '234': 2.0,\n",
+              " '269': 3.0,\n",
+              " '293': 4.0,\n",
+              " '326': 4.0,\n",
+              " '366': 5.0,\n",
+              " '38': 2.0,\n",
+              " '405': 4.0,\n",
+              " '425': 3.0,\n",
+              " '5': 3.0,\n",
+              " '537': 3.0,\n",
+              " '60': 5.0,\n",
+              " '650': 4.0,\n",
+              " '716': 3.0,\n",
+              " '788': 4.0,\n",
+              " '802': 3.0,\n",
+              " '804': 4.0,\n",
+              " '833': 4.0,\n",
+              " '95': 4.0,\n",
+              " '96': 4.0}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B_hUyEiFq2NW",
+        "outputId": "f6b56089-17e5-4396-e36f-122bf49a4b8f"
+      },
+      "source": [
+        "movielens_dataset_item['Body Snatcher, The (1945)']['833']"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4tzOfrpQrDg-"
+      },
+      "source": [
+        "get_similarities(movielens_dataset_item, 'Body Snatcher, The (1945)')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "toZJ-f-wruF9"
+      },
+      "source": [
+        "get_user_recommendation(movielens_dataset_item, 'Body Snatcher, The (1945)')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JlNpozIQr9Sq",
+        "outputId": "8fb0884e-ba4a-47f4-92ac-40ee43a27642"
+      },
+      "source": [
+        "print_user_recommendation(get_user_recommendation(movielens_dataset_item, 'Body Snatcher, The (1945)'), 4.7)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "849\n",
+            "688\n",
+            "628\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YLCMYiFWsvMu"
+      },
+      "source": [
+        "Item based filtering"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DhTCYLRtszbF",
+        "outputId": "b031ccf9-2cc6-4e3a-f515-6b179d9f65a4"
+      },
+      "source": [
+        "user_feedback_movies"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Commando': {'Mohit': 2.5,\n",
+              "  'Neha': 2.5,\n",
+              "  'Palak': 3.0,\n",
+              "  'Piyush': 2.0,\n",
+              "  'Rahul': 1.0,\n",
+              "  'Sachin': 3.5},\n",
+              " 'Lakshay': {'Mohit': 3.5,\n",
+              "  'Neha': 4.0,\n",
+              "  'Palak': 5.0,\n",
+              "  'Piyush': 3.0,\n",
+              "  'Rahul': 4.0,\n",
+              "  'Sachin': 5.0,\n",
+              "  'Smriti': 3.5},\n",
+              " 'MS Dhoni': {'Mohit': 3.0,\n",
+              "  'Neha': 4.5,\n",
+              "  'Palak': 3.5,\n",
+              "  'Piyush': 3.0,\n",
+              "  'Sachin': 3.0,\n",
+              "  'Smriti': 4.0},\n",
+              " 'Satyamev Jayte': {'Mohit': 2.5,\n",
+              "  'Palak': 3.0,\n",
+              "  'Piyush': 3.0,\n",
+              "  'Sachin': 3.0,\n",
+              "  'Smriti': 2.5},\n",
+              " 'Shershaah': {'Mohit': 3.5,\n",
+              "  'Neha': 3.5,\n",
+              "  'Palak': 3.5,\n",
+              "  'Piyush': 4.0,\n",
+              "  'Rahul': 4.5,\n",
+              "  'Sachin': 4.0,\n",
+              "  'Smriti': 3.0},\n",
+              " 'War': {'Mohit': 3.0, 'Neha': 3.0, 'Palak': 1.5, 'Piyush': 2.0}}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hr7A7uZ4tAJ_",
+        "outputId": "0d153985-614d-4ec2-c1f7-760c85f3b69d"
+      },
+      "source": [
+        "get_similarities(user_feedback_movies,'Shershaah')"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(0.3483314773547883, 'Satyamev Jayte'),\n",
+              " (0.3266316347104093, 'MS Dhoni'),\n",
+              " (0.3090169943749474, 'Lakshay'),\n",
+              " (0.2553967929896867, 'War'),\n",
+              " (0.1876127897984334, 'Commando')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HDYxmS1ztM2m",
+        "outputId": "a7678b96-ace5-4b37-bc58-54345194c4e4"
+      },
+      "source": [
+        "get_similarities(user_feedback_movies,'Lakshay')"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(0.3090169943749474, 'Shershaah'),\n",
+              " (0.27429188517743175, 'MS Dhoni'),\n",
+              " (0.2402530733520421, 'Satyamev Jayte'),\n",
+              " (0.20799159651347807, 'War'),\n",
+              " (0.18464218557642828, 'Commando')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0PWuKmzxtuSF"
+      },
+      "source": [
+        "def calculate_item_similarities(dataset):\n",
+        "  similarities = {}\n",
+        "  for item in dataset:\n",
+        "    #print(item)\n",
+        "    similarity = get_similarities(dataset, item)\n",
+        "    #print(similarity)\n",
+        "    similarities[item] = similarity\n",
+        "  return similarities"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DduSE_dsuCiG"
+      },
+      "source": [
+        "similarities = calculate_item_similarities(user_feedback_movies)"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "331BJSN4u16q",
+        "outputId": "148fa855-a6a8-4593-c847-ecf0ea9b344a"
+      },
+      "source": [
+        "similarities"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Commando': [(0.4721359549995794, 'Satyamev Jayte'),\n",
+              "  (0.3761785115301142, 'War'),\n",
+              "  (0.29429805508554946, 'MS Dhoni'),\n",
+              "  (0.1876127897984334, 'Shershaah'),\n",
+              "  (0.18464218557642828, 'Lakshay')],\n",
+              " 'Lakshay': [(0.3090169943749474, 'Shershaah'),\n",
+              "  (0.27429188517743175, 'MS Dhoni'),\n",
+              "  (0.2402530733520421, 'Satyamev Jayte'),\n",
+              "  (0.20799159651347807, 'War'),\n",
+              "  (0.18464218557642828, 'Commando')],\n",
+              " 'MS Dhoni': [(0.3761785115301142, 'Satyamev Jayte'),\n",
+              "  (0.3266316347104093, 'Shershaah'),\n",
+              "  (0.29429805508554946, 'Commando'),\n",
+              "  (0.27429188517743175, 'Lakshay'),\n",
+              "  (0.2708131845707603, 'War')],\n",
+              " 'Satyamev Jayte': [(0.4721359549995794, 'Commando'),\n",
+              "  (0.3761785115301142, 'MS Dhoni'),\n",
+              "  (0.3483314773547883, 'War'),\n",
+              "  (0.3483314773547883, 'Shershaah'),\n",
+              "  (0.2402530733520421, 'Lakshay')],\n",
+              " 'Shershaah': [(0.3483314773547883, 'Satyamev Jayte'),\n",
+              "  (0.3266316347104093, 'MS Dhoni'),\n",
+              "  (0.3090169943749474, 'Lakshay'),\n",
+              "  (0.2553967929896867, 'War'),\n",
+              "  (0.1876127897984334, 'Commando')],\n",
+              " 'War': [(0.3761785115301142, 'Commando'),\n",
+              "  (0.3483314773547883, 'Satyamev Jayte'),\n",
+              "  (0.2708131845707603, 'MS Dhoni'),\n",
+              "  (0.2553967929896867, 'Shershaah'),\n",
+              "  (0.20799159651347807, 'Lakshay')]}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cNevQzylwKxv"
+      },
+      "source": [
+        "def get_item_recommendation(user_dataset, similarities, user):\n",
+        "  scores = {}\n",
+        "  totals = {}\n",
+        "  user_scores = user_dataset[user]\n",
+        "  #print(user_scores)\n",
+        "  for(item, score) in user_scores.items():\n",
+        "    #print(item, score)\n",
+        "    for(similarity, item2) in similarities[item]:\n",
+        "      if item2 in user_scores:\n",
+        "        continue\n",
+        "      #print(similarity, item2)\n",
+        "      scores.setdefault(item2, 0)\n",
+        "      scores[item2] += similarity * score\n",
+        "      totals.setdefault(item2, 0)\n",
+        "      totals[item2] += similarity\n",
+        "\n",
+        "  #print(scores)\n",
+        "  #print(totals)\n",
+        "  recommendations = [(score/totals[item], item) for item, score in scores.items()]\n",
+        "  recommendations.sort()\n",
+        "  recommendations.reverse()\n",
+        "  return recommendations"
+      ],
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pSbrXmruwlfL",
+        "outputId": "e1ab352f-9c73-45cc-ee5c-a4ab56745c41"
+      },
+      "source": [
+        "get_item_recommendation(users_feedback, similarities, 'Rahul')"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(3.196200842319029, 'MS Dhoni'),\n",
+              " (2.8288695093208878, 'Satyamev Jayte'),\n",
+              " (2.8079125834239766, 'War')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OmEc5PjV0kEz",
+        "outputId": "bbed9cd7-c9b3-4856-b933-5e79eb158b66"
+      },
+      "source": [
+        "get_user_recommendation(users_feedback,'Rahul')"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(3.5207797678329342, 'MS Dhoni'),\n",
+              " (2.7827232588048805, 'Satyamev Jayte'),\n",
+              " (2.4015514030492744, 'War')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S8ReIqqV0xsN",
+        "outputId": "9b97f56a-df74-4b83-9af6-708d7cc8a1cf"
+      },
+      "source": [
+        "print_user_recommendation(get_item_recommendation(users_feedback, similarities, 'Rahul'), 3)"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MS Dhoni\n"
           ]
         }
       ]
